--- a/Frontend/css/index.css
+++ b/Frontend/css/index.css
@@ -502,7 +502,7 @@ button:hover {
 }
 
 #reviews {
-    background-image: url('assets/fort.jpg');
+    background-image: url('../assets/fort.jpg');
     background-size: cover;
     background-position: center;
     color: #EFC958;
